--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,17 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2033079489526847"
+     crossorigin="anonymous"></script>
+<!-- twitch -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2033079489526847"
+     data-ad-slot="8399554950"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </body>
 </html>
